added user login and create forms and functionality

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  background-color: black;
+  height: 40px;
+
+}
+
+ul {
+  margin: 0;
+  display: flex;
+  justify-content: flex-end;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+li {
   color: white;
+  list-style: none;
+  margin: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar h1 {
+  color: white;
+  margin: 0;
+  margin-left: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.login-modal-outer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(105, 105, 105, 0.573);
+  z-index: 2;
+}
+
+.account-form {
+position: fixed;
+left: 0;
+right: 0;
+top: 30%;
+margin: 0 auto;
+background-color: white;
+padding: 20px;
+width: 500px;
+border-radius: 10px;
+}
+
+p {
+  color: black;
 }
