--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,153 @@ border-radius: 10px;
 p {
   color: black;
 }
+
+.container {
+  max-width: 600px;
+  margin: 20px auto;
+  background-image: linear-gradient(#7a7d68, #d6d9d0 );
+  border-radius: 50px;
+  font-family: 'Comic Sans MS', cursive, sans-serif;
+  text-align: center;
+  box-shadow: 0 0 20px 5px goldenrod;
+  transition: all 0.3s ease;
+  padding-top: 10px;
+  color: white;
+}
+
+@media (max-width: 600px) {
+  .container {
+    width: 90%;
+  }
+}
+
+input[type="text"],
+input[type="number"],
+input[type="password"],
+textarea {
+  background-color: #ffffff;
+  border: none;
+  border-radius: 20px;
+  box-shadow: 0 0 10px 2px grey;
+  font-size: 18px;
+  padding: 12px;
+  width: 80%;
+  margin:20px 20px 20px 0;
+}
+
+input[type="submit"] {
+  background-color: #ffffff;
+  border: none;
+  border-radius: 10px;
+  color: #9faab8;
+  cursor: pointer;
+  font-size: 22px;
+  padding: 10px 20px;
+  transition: all 0.3s ease;
+  margin-bottom: 10px;
+}
+
+input[type="submit"]:hover {
+  background-color: goldenrod;
+  color: #ffffff;
+}
+.gift{
+  max-width: 800px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 10px;
+  padding: 20px;
+  background-image: linear-gradient(#b8beb2, #f4f4f4);
+  text-align: center;
+  position: relative;
+  margin-bottom: 30px;
+}
+
+
+.gift:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+
+.gifts {
+  padding: 45px;
+  margin-bottom: 30px;
+  
+}
+.btn{
+  background-color: #b8beb2;
+  border: none;
+  border-radius: 10px;
+  color: black;
+  cursor: pointer;
+  font-size: 22px;
+  padding: 10px 20px;
+  transition: all 0.3s ease;
+  margin-bottom: 10px;
+  position: absolute;
+  top: 0;
+ left: 0;
+}
+.btn:hover{
+  background-color: #7a7d68;
+  color: #ffffff;
+}
+.ribbon {
+  position: fixed;
+  inset: 0 auto auto 0;
+  background: red;
+  background: red;
+  transform-origin: 100% 0; /* or top left */
+  transform: translate(-29.3%) rotate(-45deg);
+  
+}
+.ribbon-1 {
+  position: fixed;
+  inset: 0 auto auto 0;
+  background: red;
+  transform-origin: 100% 0;
+  transform: translate(-29.3%) rotate(-45deg);
+  box-shadow: 0 0 0 999px red;
+  clip-path: inset(0 -100%);
+  color: white;
+}
+
+.left {
+  inset: 0 auto auto 0; /* top and left equal to 0 */
+  transform-origin: 100% 0; /* OR top right */
+  transform: translate(-29.3%) rotate(-45deg);
+}
+.right {
+  inset: 0 0 auto auto; /* top and right equal to 0 */
+  transform-origin: 0 0; /* OR top left */
+  transform: translate(29.3%) rotate(45deg);
+}
+.ribbon-2 {
+  --f: 10px; /* control the folded part*/
+  --r: 15px; /* control the ribbon shape */
+  --t: 10px; /* the top offset */
+  
+  position: absolute;
+  inset: var(--t) calc(-1*var(--f)) auto auto;
+  padding: 0 10px var(--f) calc(10px + var(--r));
+  clip-path: 
+    polygon(0 0,100% 0,100% calc(100% - var(--f)),calc(100% - var(--f)) 100%,
+      calc(100% - var(--f)) calc(100% - var(--f)),0 calc(100% - var(--f)),
+      var(--r) calc(50% - var(--f)/2));
+  background: #CC0000;
+  box-shadow: 0 calc(-1*var(--f)) 0 inset #0005;
+  color: white;
+}
+.login-modal-outer{
+  position: relative;
+}
+.close-modal{
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 5px
+}
+
+
+
+
