--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@ p {
 .container {
   max-width: 600px;
   margin: 20px auto;
-  background-image: linear-gradient(#7a7d68, #d6d9d0 );
+  background-image: linear-gradient(#7CB9E8, #7CB9E8 );
   border-radius: 50px;
   font-family: 'Comic Sans MS', cursive, sans-serif;
   text-align: center;
@@ -107,7 +107,7 @@ input[type="submit"]:hover {
   transition: 0.3s;
   border-radius: 10px;
   padding: 20px;
-  background-image: linear-gradient(#b8beb2, #f4f4f4);
+  background-image: linear-gradient(#6CB4EE, #f4f4f4);
   text-align: center;
   position: relative;
   margin-bottom: 30px;
@@ -121,11 +121,13 @@ input[type="submit"]:hover {
 
 .gifts {
   padding: 45px;
-  margin-bottom: 30px;
-  
+  margin-right: 30px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 25px;
 }
 .btn{
-  background-color: #b8beb2;
+  background-color: #6CB4EE;
   border: none;
   border-radius: 10px;
   color: black;
@@ -139,7 +141,7 @@ input[type="submit"]:hover {
  left: 0;
 }
 .btn:hover{
-  background-color: #7a7d68;
+  background-color: #72A0C1;
   color: #ffffff;
 }
 .ribbon {
@@ -186,6 +188,8 @@ input[type="submit"]:hover {
       var(--r) calc(50% - var(--f)/2));
   background: #CC0000;
   box-shadow: 0 calc(-1*var(--f)) 0 inset #0005;
+}
+.box p{
   color: white;
 }
 .login-modal-outer{
