--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
   width: 100%;
   background-color: black;
   height: 40px;
-
 }
 
 ul {
@@ -141,7 +140,7 @@ input[type="submit"]:hover {
  left: 0;
 }
 .btn:hover{
-  background-color: #72A0C1;
+  background-color: #CC0000;
   color: #ffffff;
 }
 .ribbon {
@@ -200,6 +199,13 @@ input[type="submit"]:hover {
   top: 0;
   right: 0;
   margin: 5px
+}
+.picture{
+  width: 300px;
+  height: 300px;
+ 
+  background-size: cover;
+  background-position: center;
 }
 
 
