--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,10 @@ p {
   color: black;
 }
 
+.nav-links, .close-modal, input[type='checkbox'] {
+  cursor: pointer;
+}
+
 .container {
   max-width: 600px;
   margin: 20px auto;
@@ -207,6 +211,8 @@ input[type="submit"]:hover {
   background-size: cover;
   background-position: center;
 }
+
+
 
 
 
