--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,11 @@
   justify-content: space-between;
   width: 100%;
   background-color: black;
-  height: 40px;
+  height: 10vh;
+}
 
+.dropdown-toggle {
+  color: white !important;
 }
 
 ul {
@@ -26,7 +29,15 @@ li {
   margin-left: 10px;
 }
 
-.login-modal-outer {
+.modal {
+  padding-top: 10vh;
+}
+
+.nav-btn {
+  color: white !important;
+}
+
+/* .login-modal-outer {
   position: fixed;
   top: 0;
   left: 0;
@@ -46,7 +57,7 @@ background-color: white;
 padding: 20px;
 width: 500px;
 border-radius: 10px;
-}
+} */
 
 p {
   color: black;
