--- a/src/App.css
+++ b/src/App.css
@@ -67,8 +67,8 @@ p {
   cursor: pointer;
 }
 
-.container {
-  max-width: 200px;
+.add-form{
+  max-width: 600px;
   max-height: 200vh;
   margin: 20px auto;
   background-image: linear-gradient(#7CB9E8, #7CB9E8 );
@@ -103,7 +103,18 @@ textarea {
   margin:10px 10px 10px 0;
 }
 
-.add {
+.add{
+  background-color: #ffffff;
+  border: none;
+  border-radius: 10px;
+  color: #9faab8;
+  cursor: pointer;
+  font-size: 22px;
+  padding: 10px 20px;
+  transition: all 0.3s ease;
+  margin-bottom: 10px;
+}
+.add-gift{
   background-color: #ffffff;
   border: none;
   border-radius: 10px;
@@ -115,7 +126,11 @@ textarea {
   margin-bottom: 10px;
 }
 
-.add:hover {
+.add :hover {
+  background-color: goldenrod;
+  color: #ffffff;
+}
+.add-gift:hover {
   background-color: goldenrod;
   color: #ffffff;
 }
