--- a/src/App.css
+++ b/src/App.css
@@ -126,7 +126,7 @@ textarea {
   margin-bottom: 10px;
 }
 
-.add :hover {
+.add:hover {
   background-color: goldenrod;
   color: #ffffff;
 }
@@ -135,7 +135,7 @@ textarea {
   color: #ffffff;
 }
 .gift{
-  max-width: 800px;
+  max-width: 500px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 10px;
@@ -154,7 +154,7 @@ textarea {
 
 .gifts {
   padding: 45px;
-  margin-right: 30px;
+  margin: auto;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 25px;
@@ -243,6 +243,11 @@ textarea {
 label{
   font-weight: bold;
   font-size: 20px;
+}
+@media (max-width: 760px) {
+  .gifts {
+    grid-template-columns: 1fr;
+  }
 }
 
 
