--- a/src/App.css
+++ b/src/App.css
@@ -155,7 +155,7 @@ textarea {
   transition: 0.3s;
   border-radius: 10px;
   padding: 20px;
-  background-image: linear-gradient(#6CB4EE, #f4f4f4);
+  background-image: linear-gradient(#4062bb, #6CB4EE);
   text-align: center;
   position: relative;
   margin-bottom: 30px;
