--- a/src/App.css
+++ b/src/App.css
@@ -181,14 +181,16 @@ textarea {
 
 .gift {
   max-width: 500px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.408);
   transition: 0.3s;
   border-radius: 10px;
   padding: 20px;
-  background-image: linear-gradient(#4062bb, #6CB4EE);
+  /* background-color: white; */
+  background-image: linear-gradient(white, rgb(236, 235, 235));
   text-align: center;
   position: relative;
   margin-bottom: 30px;
+
 }
 
 
@@ -199,7 +201,7 @@ textarea {
 
 
 .gifts {
-  padding: 60px;
+  padding-top: 60px;
   margin-top: 4em;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -326,8 +328,9 @@ label {
 
 .tag-box {
   margin: .3em;
-  background-color: rgb(85, 101, 192);
-  color: white;
+  /* background-color: #CC0000; */
+  background-color: rgb(200, 200, 200);
+  color: rgb(102, 102, 102);
   padding: .3em;
   border-radius: .5em;
   text-transform: lowercase;
@@ -387,13 +390,5 @@ label {
   /* style when not purchased */
   color: black;
   
-}
-
-
-
-
-
-
-
 }
 
