--- a/src/App.css
+++ b/src/App.css
@@ -199,7 +199,6 @@ textarea {
   margin-top: 4em;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
   grid-gap: 25px;
   justify-items: center;
 }
@@ -283,6 +282,7 @@ label {
 .tags-container {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .tag-box {
