--- a/src/App.css
+++ b/src/App.css
@@ -229,13 +229,11 @@ textarea {
 .delete {
   background-color: white;
   border: none;
-  border-radius: 10px;
+  border-radius: 4px;
   color: black;
   cursor: pointer;
-  font-size: 22px;
-  padding: 10px 20px;
+  font-size: 15px;
   transition: all 0.3s ease;
-  margin-bottom: 10px;
   position: absolute;
   top: 0;
   left: 0;
@@ -375,6 +373,7 @@ label {
   opacity: 0.4;
   font-family: "lato", sans-serif;
   text-align: center;
+  padding-right: 120px;
 }
 .onSale {
   font-family: "lato", sans-serif;
