--- a/src/App.css
+++ b/src/App.css
@@ -100,7 +100,8 @@ input[type='checkbox'] {
   cursor: pointer;
 }
 
-.add-form, .edit-form {
+.add-form,
+.edit-form {
   max-width: 600px;
   max-height: 200vh;
   margin: 20px auto;
@@ -208,81 +209,8 @@ textarea {
   grid-gap: 25px;
   justify-items: center;
 }
-.welcome-box{
-  display: grid;
-}
-.welcome-container {
-  /* margin-top: 15em;
-  margin-right: 2em; */
-  margin: 15em auto;
-  text-align: center;
-}
 
-@keyframes fadeIn {
-	from {
-		opacity: 0;
-		transform: translate3d(0, -20%, 0);
-	}
-	to {
-		opacity: 1;
-		transform: translate3d(0, 0, 0);
-	}
-}
-
-.bigTitle{
-  color: #CC0000;
-  font-size: 10vw;
-  padding: 0em;
-  margin: 0;
-  animation: fadeIn 1s ease-in both;
-}
-
-.smallTitle{
-  font-size: 4.5vw;
-  /* margin-right: .3em; */
-  padding-top: 0;
-  animation: fadeIn 1s ease-in both;
-  animation-delay: 1s;
-}
-
-.smallestTitle{
-  font-size: 3vw;
-  /* margin-right: .5em; */
-  animation: fadeIn 1s ease-in both;
-  animation-delay: 3s;
-}
-
-@media (max-width: 700px) {
-  .welcome-container{
-    text-align: center;
-    margin: 25em auto;
-  }
-  .bigTitle{
-    color: #CC0000;
-    font-size: 20vw;
-    padding: 0em;
-    margin: 0;
-    animation: fadeIn 1s ease-in both;
-  }
-  
-  .smallTitle{
-    font-size: 9vw;
-    /* margin-right: .3em; */
-    padding-top: 0;
-    animation: fadeIn 1s ease-in both;
-    animation-delay: 1s;
-  }
-  
-  .smallestTitle{
-    font-size: 6vw;
-    /* margin-right: .5em; */
-    animation: fadeIn 1s ease-in both;
-    animation-delay: 3s;
-  }
-
-}
-
-.delete{
+.delete {
   background-color: #6CB4EE;
   border: none;
   border-radius: 10px;
@@ -359,7 +287,8 @@ textarea {
   box-shadow: 0 calc(-1*var(--f)) 0 inset #0005;
   cursor: pointer;
 }
-.ribb{
+
+.ribb {
   padding-top: 10px;
 
 }
@@ -367,7 +296,7 @@ textarea {
 
 .box p {
   color: white;
-  
+
 }
 
 .login-modal-outer {
@@ -443,6 +372,7 @@ label {
     grid-template-columns: repeat(1, 1fr);
   }
 }
+
 .ribbon-2.purchased {
   /* style when purchased */
   background-color: #CC0000;
@@ -453,6 +383,7 @@ label {
   background-color: grey;
 
 }
+
 .ribb.purchased {
   /* style when purchased */
   color: white;
@@ -461,6 +392,116 @@ label {
 .ribb.not-purchased {
   /* style when not purchased */
   color: black;
-  
+
 }
 
+/* Welcome Screen */
+.welcome-box {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 10em 10em 10em 10em 10em;
+}
+
+.welcome-icon {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 4;
+  animation: fadeIn 1s ease-in both;
+}
+
+.welcome-container {
+  /* margin-top: 15em;
+  margin-right: 2em; */
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row-start: 2;
+  grid-row-end: 4;
+  margin: auto;
+  text-align: center;
+}
+
+
+.bigTitle {
+  color: #CC0000;
+  font-size: 10vw;
+  padding: 0em;
+  margin: 0;
+  animation: fadeIn 1s ease-in both;
+}
+
+.smallTitle {
+  font-size: 2.5vw;
+  /* margin-right: .3em; */
+  padding-top: 0;
+  animation: fadeIn 1s ease-in both;
+  animation-delay: 1s;
+}
+
+.smallestTitle {
+  font-size: 2vw;
+  /* margin-right: .5em; */
+  animation: fadeIn 1s ease-in both;
+  animation-delay: 3s;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translate3d(0, -20%, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@media (max-width: 700px) {
+  .welcome-box {
+    display: grid;
+    grid-template-columns: 20vw 20vw 20vw 20vw 20vw;
+    grid-template-rows: 100px 10rem 10rem 10rem 10rem;
+  }
+  .welcome-container {
+    text-align: center;
+    margin: auto;
+    grid-column-start: 2;
+    grid-column-end: 5;
+    grid-row-start: 4;
+    grid-row-end: 6;
+  }
+
+  .welcome-icon {
+    size: .5px;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 4;
+    animation: fadeIn 1s ease-in both;
+  }
+
+  .bigTitle {
+    color: #CC0000;
+    font-size: 10vw;
+    padding: 0em;
+    margin: 0;
+    animation: fadeIn 1s ease-in both;
+  }
+
+  .smallTitle {
+    font-size: 4.5vw;
+    /* margin-right: .3em; */
+    padding-top: 0;
+    animation: fadeIn 1s ease-in both;
+    animation-delay: 1s;
+  }
+
+  .smallestTitle {
+    font-size: 3vw;
+    /* margin-right: .5em; */
+    animation: fadeIn 1s ease-in both;
+    animation-delay: 3s;
+  }
+
+}
