--- a/src/App.css
+++ b/src/App.css
@@ -213,7 +213,7 @@ textarea {
 } */
 
 .gift {
-  max-width: 500px;
+  width: 350px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.408);
   transition: 0.3s;
   border-radius: 10px;
@@ -334,6 +334,8 @@ textarea {
   height: 300px;
   background-size: cover;
   background-position: center;
+  object-fit: cover;
+  border-radius: 20px;
 }
 
 label {
